// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ActionControls/HighlightControls should correctly render the drawing controls 1`] = `
<div
  className="ba-action-controls-highlight"
>
  <PlainButton
    className="ba-highlight-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconHighlightAnnotation
      className=""
      height={24}
      width={24}
    />
  </PlainButton>
  <PlainButton
    className="ba-highlight-comment-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconHighlightCommentAnnotation
      className=""
      height={20}
      width={20}
    />
  </PlainButton>
</div>
`;

exports[`components/ActionControls/HighlightControls should not render the highlight button if the user cannot delete 1`] = `
<div
  className="ba-action-controls-highlight"
>
  <PlainButton
    className="ba-highlight-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconHighlightAnnotation
      className=""
      height={24}
      width={24}
    />
  </PlainButton>
</div>
`;

exports[`components/ActionControls/HighlightControls should not render the highlight comment button if the user cannot annotate 1`] = `
<div
  className="ba-action-controls-highlight"
>
  <PlainButton
    className="ba-highlight-comment-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconHighlightCommentAnnotation
      className=""
      height={20}
      width={20}
    />
  </PlainButton>
</div>
`;
